seaqt/QtMultimedia/gen_qaudioprobe.h

class QAudioBuffer;
class QAudioProbe;
class QMediaObject;
class QMediaRecorder;
class QMetaObject;
class QObject;
typedef struct QAudioBuffer QAudioBuffer;
typedef struct QAudioProbe QAudioProbe;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMediaObject QMediaObject;
typedef struct QMediaRecorder QMediaRecorder;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
QAudioProbe* QAudioProbe_new();
QAudioProbe* QAudioProbe_new2(QObject* parent);
QMetaObject* QAudioProbe_metaObject(const QAudioProbe* self);
void* QAudioProbe_metacast(QAudioProbe* self, const char* param1);
int QAudioProbe_metacall(QAudioProbe* self, int param1, int param2, void** param3);
struct miqt_string QAudioProbe_tr(const char* s);
struct miqt_string QAudioProbe_trUtf8(const char* s);
bool QAudioProbe_setSource(QAudioProbe* self, QMediaObject* source);
bool QAudioProbe_setSourceWithSource(QAudioProbe* self, QMediaRecorder* source);
bool QAudioProbe_isActive(const QAudioProbe* self);
void QAudioProbe_audioBufferProbed(QAudioProbe* self, QAudioBuffer* buffer);
void QAudioProbe_connect_audioBufferProbed(QAudioProbe* self, intptr_t slot);
void QAudioProbe_flush(QAudioProbe* self);
void QAudioProbe_connect_flush(QAudioProbe* self, intptr_t slot);
struct miqt_string QAudioProbe_tr2(const char* s, const char* c);
struct miqt_string QAudioProbe_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioProbe_trUtf82(const char* s, const char* c);
struct miqt_string QAudioProbe_trUtf83(const char* s, const char* c, int n);
bool QAudioProbe_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QAudioProbe_virtualbase_metaObject(const void* self);
bool QAudioProbe_override_virtual_metacast(void* self, intptr_t slot);
void* QAudioProbe_virtualbase_metacast(void* self, const char* param1);
bool QAudioProbe_override_virtual_metacall(void* self, intptr_t slot);
int QAudioProbe_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QAudioProbe_override_virtual_event(void* self, intptr_t slot);
bool QAudioProbe_virtualbase_event(void* self, QEvent* event);
bool QAudioProbe_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAudioProbe_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QAudioProbe_override_virtual_timerEvent(void* self, intptr_t slot);
void QAudioProbe_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAudioProbe_override_virtual_childEvent(void* self, intptr_t slot);
void QAudioProbe_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAudioProbe_override_virtual_customEvent(void* self, intptr_t slot);
void QAudioProbe_virtualbase_customEvent(void* self, QEvent* event);
bool QAudioProbe_override_virtual_connectNotify(void* self, intptr_t slot);
void QAudioProbe_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAudioProbe_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAudioProbe_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QAudioProbe_staticMetaObject();
void QAudioProbe_delete(QAudioProbe* self);